[package]
name = "rb_chess2"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
hyper-tungstenite = "0.20.0"
tungstenite = "0.29.0"